// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests TasksTable.stories BaseTaskTable 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
          data-cy="tasks-table"
          data-loading="false"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 40%;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell cy-task-table-col-NAME ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Task Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-BASE_STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Base Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-VARIANT ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Variant
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ixbeze"
                          data-cy="task-status-badge"
                        >
                          Running
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ohl2hc"
                          data-cy="task-status-badge"
                        >
                          Unscheduled
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_2"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_2?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some other Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_3"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_3?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some different Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/Windows"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Windows 97
                        </span>
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests TasksTable.stories ExecutionTasksTable 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
          data-cy="tasks-table"
          data-loading="false"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 40%;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell cy-task-table-col-NAME ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Task Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-BASE_STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Base Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-VARIANT ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Variant
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ixbeze"
                          data-cy="task-status-badge"
                        >
                          Running
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ohl2hc"
                          data-cy="task-status-badge"
                        >
                          Unscheduled
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_2"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_2?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some other Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_3"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_3?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some different Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/Windows"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Windows 97
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_4"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_4?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some Fancy Display Task
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_4?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_4?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/Windows"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Windows 97
                        </span>
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests TasksTable.stories VersionTasksTable 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
          data-cy="tasks-table"
          data-loading="false"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 40%;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell cy-task-table-col-NAME ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Task Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-BASE_STATUS ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Previous Status
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell cy-task-table-col-VARIANT ant-table-column-has-sorters"
                    >
                      <div
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Variant
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ixbeze"
                          data-cy="task-status-badge"
                        >
                          Running
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ohl2hc"
                          data-cy="task-status-badge"
                        >
                          Unscheduled
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_2"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_2?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some other Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_2?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/ubuntu1604"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Ubuntu 16.04
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="some_id_3"
                  >
                    <td
                      class="ant-table-cell cy-task-table-col-NAME ant-table-cell-with-append"
                    >
                      <span
                        class="ant-table-row-indent indent-level-0"
                        style="padding-left: 0px;"
                      />
                      <button
                        aria-label="Expand row"
                        class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                        type="button"
                      />
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/task/some_id_3?execution=0"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          <span
                            class="css-1n07wk9-WordBreak-wordBreakCss-WordBreakAll e1up3kz80"
                          >
                            Some different Fancy ID
                          </span>
                        </span>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-STATUS"
                    >
                      <a
                        href="/task/some_id_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-n4itms"
                          data-cy="task-status-badge"
                        >
                          Succeeded
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-BASE_STATUS"
                    >
                      <a
                        href="/task/some_base_task_3?execution=0"
                      >
                        <div
                          class="css-11x3fkx-StyledBadge-badgeWidthMaxContent-badgeWidthMaxContent e19oz5u0 leafygreen-ui-ud6teo"
                          data-cy="task-status-badge"
                        >
                          Failed
                        </div>
                      </a>
                    </td>
                    <td
                      class="ant-table-cell cy-task-table-col-VARIANT"
                    >
                      <a
                        class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
                        href="/variant-history/evg/Windows"
                      >
                        <span
                          class="leafygreen-ui-1ewnca3"
                        >
                          Windows 97
                        </span>
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
